--- a/index.html
+++ b/index.html
@@ -1,15 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-  <script src="./js/script.js"defer></script>
-  <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Monoton&family=Noto+Music&display=swap"
+    rel="stylesheet" />
+  <script src="./js/script.js" defer></script>
+  <title>Create Account</title>
 </head>
+
 <body>
-  
+  <main>
+    <div class="left-side">
+      <div class="image-container">
+        <img class="odin-logo" src="/images/odinlogo.png" alt="">
+        <p>ODIN</p>
+      </div>
+    </div>
+    <div class="right-side">
+
+      <p>
+        This is not a real online service! You know you need something like this in your life to help you realize your
+        deepest dreams. Sign up <em>now </em>  to get started.
+      </p>
+      <p>
+        You <em>know </em>  you want to.
+      </p>
+
+      <form action="">
+        <legend>Let's do this!</legend>
+        <div class="field-container">
+          <div class="form-row">
+            <div>
+              <label for="first-name">FIRST NAME</label>
+              <input type="text" id="first-name" name="first-name">
+            </div>
+            <div>
+              <label for="last-name">LAST NAME</label>
+              <input type="text" id="last-name" name="last-name" value="">
+            </div>
+          </div>
+          <div class="form-row">
+            <div>
+              <label for="email">EMAIL</label>
+              <input type="email" id="email" name="email" placeholder="username@domain.com">
+            </div>
+            <div>
+              <label for="phone">PHONE</label>
+              <input type="number" id="phone" name="phone" placeholder="xxx-xxx-xxx">
+            </div>
+          </div>
+          <div class="form-row">
+            <div>
+              <label for="password">PASSWORD</label>
+              <input type="password" id="password" name="password">
+            </div>
+            <div>
+              <label for="fname">CONFIRM PASSWORD</label>
+              <input type="text" id="fname" name="fname">
+            </div>
+          </div>
+        </div>
+        </fieldset>
+      </form>
+      <div class="bottom-section">
+        <button type="submit" class="create-acc-btn">Create Account
+        </button>
+        <p>Already have an account? <a href="#">Log in.</a></p>
+      </div>
+    </div>
+    </div>
+  </main>
+
 </body>
+
 </html>
