--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
       <p>
         This is not a real online service! You know you need something like this in your life to help you realize your
-        deepest dreams. Sign up <em>now </em>  to get started.
+        deepest dreams. Sign up <em>now </em> to get started.
       </p>
       <p>
-        You <em>know </em>  you want to.
+        You <em>know </em> you want to.
       </p>
 
       <form action="">
@@ -38,31 +38,32 @@
           <div class="form-row">
             <div>
               <label for="first-name">FIRST NAME</label>
-              <input type="text" id="first-name" name="first-name">
+              <input type="text" id="first-name" name="first-name" required minlength="2" maxlength="20">
             </div>
             <div>
               <label for="last-name">LAST NAME</label>
-              <input type="text" id="last-name" name="last-name" value="">
+              <input type="text" id="last-name" name="last-name" required minlength="2" maxlength="20">
             </div>
           </div>
           <div class="form-row">
             <div>
               <label for="email">EMAIL</label>
-              <input type="email" id="email" name="email" placeholder="username@domain.com">
+              <input type="email" id="email" name="email" placeholder="username@domain.com" required maxlength="35">
             </div>
             <div>
               <label for="phone">PHONE</label>
-              <input type="number" id="phone" name="phone" placeholder="xxx-xxx-xxx">
+              <input type="number" id="phone" name="phone" placeholder="Enter digits only" maxlength="12">
             </div>
           </div>
           <div class="form-row">
             <div>
               <label for="password">PASSWORD</label>
-              <input type="password" id="password" name="password">
+              <input type="password" id="password-field" class="error" name="password" required>
+              <label class="error-message"></label>
             </div>
             <div>
-              <label for="fname">CONFIRM PASSWORD</label>
-              <input type="text" id="fname" name="fname">
+              <label for="password">CONFIRM PASSWORD</label>
+              <input type="password" id="confirm-password-field" class="error" name="password" required>
             </div>
           </div>
         </div>
