Trying to fix background image.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <div class="left-side">
       <div class="image-container">
-        <img class="odin-logo" src="/images/odinlogo.png" alt="">
+        <img class="odin-logo" src="images/odinlogo.png" alt="">
         <p>ODIN</p>
       </div>
     </div>
